# rime_auto_import

./: Cargo.toml  README.md  redeme.md
src/: main.rs
