[package]
name = "rime_auto_import"
version = "0.1.0"
edition = "2021"
authors = ["FengYouJun"]
description = "自动从git导入小鹤双拼的自定义词库到Rime中"
repository = "https://github.com/FengYouJun520/rime_auto_import"
license = "MIT"
keywords = ["rime", "flypy", "auto", "import"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive", "unicode", "wrap_help"] }
dirs = "4.0.0"
open = "3.0.3"
regex = "1.6.0"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["full"] }

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
incremental = true
